# cas748

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assignments/: CMakeLists.txt  Makefile  a1.cpp  a1.data.noisy  a1_basic.cpp  a2_spectrogram.cpp  a3_fold.plot  a3_predict.cpp  a3_predict.plot  a3_sp500.cpp
assignments/a1/: Makefile  assignment1.md  main.cpp
assignments/a2/: Makefile  main.cpp
examples/: CMakeLists.txt  fourier.cpp  samples.cpp  wav.cpp
inc/caslib/: analyze.hpp  audio.hpp  colour.hpp  csv.hpp  functions.hpp  io.hpp  itertools.hpp  lti.hpp  savitzky_golay.hpp  series.hpp  state_space.hpp  waves.hpp  windows.hpp
inc/caslib/file/: audio.hpp  csv.hpp  wav.hpp
scripts/: CMakeLists.txt  analyze.cpp  fir.cpp  make_data.cpp  svm.cpp
src/: CMakeLists.txt  analyze.cpp  colour.cpp  csv.cpp  functions.cpp  io.cpp  savitzky_golay.cpp  series.cpp  waves.cpp  windows.cpp
src/file/: CMakeLists.txt  csv.cpp  wav.cpp
src/series/: CMakeLists.txt  io.cpp  operator.cpp  series.cpp  stats.cpp
test/: CMakeLists.txt  helper.hpp  helpers.cpp  helpers.hpp  test_analyze.cpp  test_analyze_stats.cpp  test_colour.cpp  test_cross_correlation.cpp  test_csv.cpp  test_filter.cpp  test_knn.cpp  test_lti.cpp  test_pca.cpp  test_read_wav.cpp  test_series_constructor.cpp  test_series_create.cpp  test_series_operator.cpp  test_state_space.cpp  test_view.cpp  test_windows.cpp
test/data/: test_load_dataset.csv  test_load_series.csv
